# EMUstack

./: .coverage  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  environment.yml  justfile  meson.build  meson.options  pyproject.toml  setup.py
.github/workflows/: test.yml
backend/: mode_calcs.py  plotting.py  stack.py
backend/fortran/: Makefile  conv_gmsh.f
backend/fortran/msh/: 500_0_500_0_120.msh  500_0_500_0_120.msh2
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  install.rst  intro.rst  python_backend.rst  tutorial.rst
docs/source/_static/: custom.css
docs/source/examples/: index.rst  searchindex.bak  simo_010-single_interface.ipynb  simo_010-single_interface.py  simo_010-single_interface.py.md5  simo_010-single_interface.rst  simo_010-single_interface_codeobj.pickle  simo_011-single_interface-dispersive.ipynb  simo_011-single_interface-dispersive.py  simo_011-single_interface-dispersive.py.md5  simo_011-single_interface-dispersive.rst  simo_011-single_interface-dispersive_codeobj.pickle  simo_020-thin_film_multilayered_stack.ipynb  simo_020-thin_film_multilayered_stack.py  simo_020-thin_film_multilayered_stack.py.md5  simo_020-thin_film_multilayered_stack.rst  simo_020-thin_film_multilayered_stack_codeobj.pickle  simo_021-thin_film_mirror.ipynb  simo_021-thin_film_mirror.py  simo_021-thin_film_mirror.py.md5  simo_021-thin_film_mirror.rst  simo_021-thin_film_mirror_codeobj.pickle  simo_030-1D_grating.ipynb  simo_030-1D_grating.py  simo_030-1D_grating.py.md5  simo_030-1D_grating.rst  simo_030-1D_grating_codeobj.pickle  simo_031-1D_grating-2_inclusions.py  simo_031-1D_grating-2_inclusions.py.md5  simo_031-1D_grating-2_inclusions_codeobj.pickle  simo_032-1D_grating-3_inclusions.ipynb  simo_032-1D_grating-3_inclusions.py  simo_032-1D_grating-3_inclusions.py.md5  simo_032-1D_grating-3_inclusions_codeobj.pickle  simo_040-2D_array.ipynb  simo_040-2D_array.py  simo_040-2D_array.py.md5  simo_040-2D_array_codeobj.pickle  simo_041-combining_1D_and_2D_array.ipynb  simo_041-combining_1D_and_2D_array.py  (+35 more)
emustack/: __about__.py  __init__.py  materials.py  meson.build  mode_calcs.py  objects.py  paths.py  plotting.py  stack.py
emustack.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
emustack/fortran/: Makefile  get_fortran  justfile  meson.build  py_calc_modes.f  py_calc_modes_1d.f
emustack/fortran/lib/: meson.build  umf4_f77zwrapper.c  umf4_f77zwrapper64.c
emustack/fortran/msh/: 165_0_165_0_140_e_0_5714285714285714.mail  500_0_500_0_120.mail  600_0_600_0_120.geo  600_0_600_0_120.mail  940_0_940_0_266_sq.mail
examples/: simo_010-single_interface.py  simo_011-single_interface-dispersive.py  simo_020-thin_film_multilayered_stack.py  simo_021-thin_film_mirror.py  simo_030-1D_grating.py  simo_031-1D_grating-2_inclusions.py  simo_032-1D_grating-3_inclusions.py  simo_040-2D_array.py  simo_041-combining_1D_and_2D_array.py  simo_042-eliptical_holes-CD.py  simo_050-plotting_fields_1d.py  simo_051-plotting_fields_2d.py  simo_052-plotting_amplitudes.py  simo_053-plotting_k_space_amps.py  simo_060-shear_transformations.py  simo_070-ultrathin_limit.py  simo_071-many_substrates.py  simo_080-convergence-stacked_gratings.py  simo_090-EOT.py  simo_091-slab_mode_finding.py
examples/_old/: Simo_results.npz  simo_010-single_interface.py  simo_011-single_interface-dispersive.py  simo_020-thin_film_multilayered_stack.py  simo_021-thin_film_mirror.py  simo_030-1D_grating.py  simo_031-1D_grating-2_inclusions.py  simo_032-1D_grating-3_inclusions.py  simo_040-2D_array.py  simo_041-combining_1D_and_2D_array.py  simo_042-eliptical_holes-CD.py  simo_050-plotting_fields_1d.py  simo_051-plotting_fields_2d.py  simo_052-plotting_amplitudes.py  simo_053-plotting_k_space_amps.py  simo_060-shear_transformations.py  simo_070-ultrathin_limit.py  simo_071-many_substrates.py  simo_080-convergence-stacked_gratings.py  simo_090-EOT.py  simo_091-slab_mode_finding.py
examples/reload_simo/: simo_reload.py
tests/: .gitignore  _test_case_5_EOT_5_degrees.py  _test_case_6_TW_replication.py  test_case_0_thin_film_multistack.py  test_case_1_simple_struct.py  test_case_2_simple_non_norm_inc.py  test_case_3_simple_mk_msh.py  test_case_4_stacked_gratings.py  test_case_5_EOT_5_degrees.py  test_case_6_TW_replication.py  test_case_7_EOT.py  testing.py
tests/ref/: case_5.npz  case_6.npz  case_7.npz
tests/ref/case_5/: Lay_Absorb_0_stack0001.txt  Lay_Trans_0_stack0001.txt  Reflectance_stack0001.txt
tests/ref/case_6/: Absorptance_stack0001.txt  Lay_Absorb_0_stack0001.txt  Lay_Absorb_1_stack0001.txt  Lay_Absorb_2_stack0001.txt  Lay_Trans_0_stack0001.txt  Lay_Trans_1_stack0001.txt  Lay_Trans_2_stack0001.txt  Reflectance_stack0001.txt  Transmittance_stack0001.txt
tests/ref/case_7/: Lay_Absorb_0_stack0001.txt  Lay_Trans_0_stack0001.txt  Reflectance_stack0001.txt
