[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'meson >= 0.64.0', "numpy >=1.20"]

[project]
name = 'emustack'
version = '0.9.2'
description = "Light propagation through multi-layered stacks of dispersive, lossy, nanostructured, optical media"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["photonics"]
authors = [{ name = "Björn Sturmberg" }]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Utilities",
]
dependencies = ["numpy >= 1.20", "scipy >= 0.18.0", "matplotlib"]

[tool.setuptools]
packages = ["emustack"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-datadir",
  "pytest-sugar",
  "pytest-xdist[psutil]",
  "coverage",
]
doc = [
  "MarkupSafe",
  "Sphinx",
  "pydata-sphinx-theme",
  "sphinx-gallery",
  "sphinx-copybutton",
  "memory_profiler",
]
dev = ["ruff"]
all = ["emustack[test,doc,dev]"]

[tool.pytest.ini_options]
addopts = "--cov=emustack --cov-report html --cov-report term"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
extend-select = [
  "E501", #line-too-long
  "UP", # pyupgrade
  "D", # pydocstyle

]
ignore = ["D206"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
